--- a/graphql-core/pom.xml
+++ b/graphql-core/pom.xml
@@ -11,10 +11,25 @@
     <artifactId>graphql-core</artifactId>
     <name>Dropwizard GraphQL Bundle</name>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.8</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java-servlet</artifactId>
+            <version>0.9.0</version>
         </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
