--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.8</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
