--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.smoketurner.dropwizard</groupId>
     <artifactId>dropwizard-graphql</artifactId>
-    <version>1.0.5-1-SNAPSHOT</version>
+    <version>1.0.5-1</version>
     <packaging>pom</packaging>
 
     <name>dropwizard-graphql</name>
@@ -47,7 +47,7 @@
         <connection>scm:git:git://github.com/smoketurner/dropwizard-graphql.git</connection>
         <developerConnection>scm:git:git@github.com:smoketurner/dropwizard-graphql.git</developerConnection>
         <url>https://github.com/smoketurner/dropwizard-graphql</url>
-        <tag>HEAD</tag>
+        <tag>v1.0.5-1</tag>
     </scm>
 
     <distributionManagement>
@@ -209,7 +209,7 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.0.1</version>
                 <configuration>
-                    <outputDirectory/>
+                    <outputDirectory />
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
@@ -317,7 +317,7 @@
                         <id>enforce</id>
                         <configuration>
                             <rules>
-                                <DependencyConvergence/>
+                                <DependencyConvergence />
                             </rules>
                         </configuration>
                         <goals>
