--- a/graphql-example/hello-world.yml
+++ b/graphql-example/hello-world.yml
@@ -4,11 +4,12 @@ defaultName: Stranger
 # HTTP-specific options.
 server:
   type: simple
+  rootPath: /api/
   applicationContextPath: /
   adminContextPath: /admin
   connector:
     type: http
-    port: 8888
+    port: 8080
 
   requestLog:
     appenders:
