Upgrade to latest graphql-java-servlet

--- a/graphql-example/pom.xml
+++ b/graphql-example/pom.xml
@@ -21,7 +21,7 @@
             <artifactId>dropwizard-assets</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.smoketurner.dropwizard</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>graphql-core</artifactId>
             <version>${project.version}</version>
         </dependency>
