--- a/graphql-core/pom.xml
+++ b/graphql-core/pom.xml
@@ -19,7 +19,12 @@
         <dependency>
             <groupId>com.graphql-java</groupId>
             <artifactId>graphql-java-servlet</artifactId>
-            <version>0.9.0</version>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java-annotations</artifactId>
+            <version>0.13.1</version>
         </dependency>
     </dependencies>
 </project>
