--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <file.encoding>UTF-8</file.encoding>
-        <dropwizard.version>1.0.6</dropwizard.version>
+        <javadoc.doclint.none>-Xdoclint:none</javadoc.doclint.none>
+        <dropwizard.version>1.1.0-rc4</dropwizard.version>
     </properties>
 
     <modules>
@@ -110,15 +111,6 @@
 
     <profiles>
         <profile>
-            <id>java8-disable-strict-javadoc</id>
-            <activation>
-                <jdk>[1.8,)</jdk>
-            </activation>
-            <properties>
-                <javadoc.doclint.none>-Xdoclint:none</javadoc.doclint.none>
-            </properties>
-        </profile>
-        <profile>
             <id>release-sign-artifacts</id>
             <activation>
                 <property>
@@ -156,7 +148,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.6.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -303,7 +295,7 @@
                 <configuration>
                     <effort>Max</effort>
                     <threshold>Default</threshold>
-                    <onlyAnalyze>com.smoketurner.dropwizard.zipkin.*</onlyAnalyze>
+                    <onlyAnalyze>com.smoketurner.dropwizard.graphql.*</onlyAnalyze>
                     <xmlOutput>true</xmlOutput>
                     <excludeFilterFile>${basedir}/../findbugs-exclude.xml</excludeFilterFile>
                 </configuration>
