--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <file.encoding>UTF-8</file.encoding>
         <javadoc.doclint.none>-Xdoclint:none</javadoc.doclint.none>
-        <dropwizard.version>1.1.0-rc4</dropwizard.version>
+        <dropwizard.version>1.1.0</dropwizard.version>
     </properties>
 
     <modules>
@@ -100,11 +100,6 @@
                 <version>${dropwizard.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>1.16.8</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
