--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.smoketurner.dropwizard</groupId>
     <artifactId>dropwizard-graphql</artifactId>
-    <version>1.1.0-2-SNAPSHOT</version>
+    <version>1.1.0-1</version>
     <packaging>pom</packaging>
 
     <name>dropwizard-graphql</name>
@@ -48,7 +48,7 @@
         <connection>scm:git:git://github.com/smoketurner/dropwizard-graphql.git</connection>
         <developerConnection>scm:git:git@github.com:smoketurner/dropwizard-graphql.git</developerConnection>
         <url>https://github.com/smoketurner/dropwizard-graphql</url>
-        <tag>HEAD</tag>
+        <tag>v1.1.0-1</tag>
     </scm>
 
     <distributionManagement>
