--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>com.graphql-java</groupId>
+                <artifactId>graphql-java</artifactId>
+                <version>6.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
