--- a/graphql-core/pom.xml
+++ b/graphql-core/pom.xml
@@ -17,14 +17,13 @@
             <artifactId>dropwizard-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.graphql-java</groupId>
-            <artifactId>graphql-java-servlet</artifactId>
-            <version>4.1.0</version>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-assets</artifactId>
         </dependency>
         <dependency>
             <groupId>com.graphql-java</groupId>
-            <artifactId>graphql-java-annotations</artifactId>
-            <version>3.0.3</version>
+            <artifactId>graphql-java-servlet</artifactId>
+            <version>4.6.1</version>
         </dependency>
     </dependencies>
 </project>
