--- a/graphql-example/pom.xml
+++ b/graphql-example/pom.xml
@@ -11,6 +11,13 @@
     <artifactId>graphql-example</artifactId>
     <name>Dropwizard GraphQL Example</name>
 
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.site.skip>true</maven.site.skip>
+        <maven.site.deploy.skip>true</maven.site.deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.dropwizard</groupId>
