--- a/graphql-example/pom.xml
+++ b/graphql-example/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.smoketurner.dropwizard</groupId>
         <artifactId>dropwizard-graphql</artifactId>
-        <version>1.2.3-1</version>
+        <version>1.2.3-2-SNAPSHOT</version>
     </parent>
 
     <artifactId>graphql-example</artifactId>
