--- a/graphql-example/pom.xml
+++ b/graphql-example/pom.xml
@@ -16,6 +16,7 @@
         <maven.install.skip>true</maven.install.skip>
         <maven.site.skip>true</maven.site.skip>
         <maven.site.deploy.skip>true</maven.site.deploy.skip>
+        <github.site.skip>true</github.site.skip>
     </properties>
 
     <dependencies>
