Added query document caching support

--- a/graphql-example/hello-world.yml
+++ b/graphql-example/hello-world.yml
@@ -19,6 +19,7 @@ defaultName: Stranger
 
 graphql:
   enableTracing: false
+  queryCache: maximumSize=10000
   schemaFiles:
   - HelloWorld.graphql
 
