--- a/graphql-core/pom.xml
+++ b/graphql-core/pom.xml
@@ -38,9 +38,9 @@
             <artifactId>dropwizard-assets</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.graphql-java</groupId>
+            <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>graphql-java-servlet</artifactId>
-            <version>6.1.2</version>
+            <version>6.1.4</version>
         </dependency>
     </dependencies>
 </project>
