--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright © 2018 Smoke Turner, LLC (contact@smoketurner.com)
+    Copyright © 2018 Smoke Turner, LLC (github@smoketurner.com)
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.smoketurner.dropwizard</groupId>
         <artifactId>dropwizard-pom</artifactId>
-        <version>0.0.17</version>
+        <version>0.0.18</version>
     </parent>
 
     <artifactId>dropwizard-graphql</artifactId>
