--- a/graphql-example/pom.xml
+++ b/graphql-example/pom.xml
@@ -33,6 +33,7 @@
         <maven.install.skip>true</maven.install.skip>
         <maven.site.skip>true</maven.site.skip>
         <maven.site.deploy.skip>true</maven.site.deploy.skip>
+        <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
     </properties>
 
     <dependencies>
