--- a/graphql-example/pom.xml
+++ b/graphql-example/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>com.smoketurner.dropwizard</groupId>
         <artifactId>dropwizard-graphql</artifactId>
-        <version>1.3.9-2</version>
+        <version>1.3.9-3-SNAPSHOT</version>
     </parent>
 
     <artifactId>graphql-example</artifactId>
