Switch from GraphiQL to GraphQL Playground

--- a/graphql-example/hello-world.yml
+++ b/graphql-example/hello-world.yml
@@ -44,7 +44,7 @@ logging:
   loggers:
     com.smoketurner.dropwizard.graphql: DEBUG
     com.example.helloworld: DEBUG
-    graphql: DEBUG
+    graphql: INFO
   appenders:
     - type: console
       timeZone: UTC
